@@ -23,6 +23,7 @@ export(sjp.glmm)
 export(sjp.gpt)
 export(sjp.grpfrq)
 export(sjp.int)
+export(sjp.kfold_cv)
 export(sjp.likert)
 export(sjp.lm)
 export(sjp.lmer)
@@ -51,6 +52,7 @@ export(sjt.xtab)
 export(sjtab)
 export(view_df)
 import(ggplot2)
+importFrom(broom,augment)
 importFrom(broom,tidy)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
@@ -60,6 +62,7 @@ importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
+importFrom(dplyr,group_by_)
 importFrom(dplyr,if_else)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename_)
@@ -69,6 +72,7 @@ importFrom(dplyr,select_)
 importFrom(dplyr,slice)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarize)
+importFrom(dplyr,ungroup)
 importFrom(effects,allEffects)
 importFrom(effects,effect)
 importFrom(grDevices,axisTicks)
@@ -89,11 +93,14 @@ importFrom(lme4,fixef)
 importFrom(lme4,getME)
 importFrom(lme4,ranef)
 importFrom(methods,is)
+importFrom(modelr,crossv_kfold)
 importFrom(nlme,getCovariateFormula)
 importFrom(nlme,getData)
 importFrom(nlme,getResponse)
 importFrom(psych,KMO)
 importFrom(psych,describe)
+importFrom(purrr,map)
+importFrom(purrr,map2)
 importFrom(scales,brewer_pal)
 importFrom(scales,grey_pal)
 importFrom(scales,percent)
@@ -207,9 +214,11 @@ importFrom(stats,xtabs)
 importFrom(tibble,add_column)
 importFrom(tibble,add_row)
 importFrom(tibble,as_tibble)
+importFrom(tibble,is.tibble)
 importFrom(tibble,lst)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,gather)
 importFrom(tidyr,spread)
+importFrom(tidyr,unnest)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
