@@ -1,5 +1,8 @@
 Version 2.1.3
 -----------------------------------------------------------------------------
+New Functions:
+* `sjp.kfold_cv()` to plot model fit from k-fold cross-validation.
+
 Changes to functions:
 * `sjp.resid()` now also returns a plot with the residual pattern, `$pattern`.
 * Plot and axis titles from effect-plots can now be changed with `title` or `axis.title` argument. Use a character vector of length > 1 to define (axis) titles for each plot or facet; use `""` to remove the plot.
